--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -144,21 +144,23 @@ dataSources:
       eventHandlers:
         - event: NameRegistered(string,bytes32,address,uint256,uint256)
           handler: handleNameRegisteredByController
-  # - kind: ethereum/contract
-  #   name: Deed
-  #   network: mainnet
-  #   source:
-  #     abi: Deed
-  #   mapping:
-  #     kind: ethereum/events
-  #     apiVersion: 0.0.2
-  #     language: wasm/assemblyscript
-  #     file: ./src/auctionRegistrar.ts
-  #     entities:
-  #       - AuctionedName
-  #     abis:
-  #       - name: Deed
-  #         file: ./abis/Deed.json
-  #     eventHandlers:
-  #       - event: OwnerChanged(address)
-  #         handler: deedTransferred
+  - kind: ethereum/contract
+    name: Deed
+    network: mainnet
+    source:
+      abi: Deed
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.2
+      language: wasm/assemblyscript
+      file: ./src/auctionRegistrar.ts
+      entities:
+        - AuctionedName
+      abis:
+        - name: Deed
+          file: ./abis/Deed.json
+      eventHandlers:
+        - event: OwnerChanged(address)
+          handler: deedTransferred
+        - event: DeedClosed()
+          handler: deedClosed
