--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "setup": "npm run codegen && npm run create-local && npm run deploy-local",
     "codegen": "graph codegen --output-dir src/types/",
     "create-local": "graph create graphprotocol/ens --node http://127.0.0.1:8020",
+    "remove-local": "graph remove graphprotocol/ens --node http://127.0.0.1:8020",
     "build": "graph build",
     "deploy-local": "graph deploy graphprotocol/ens --debug --ipfs http://localhost:5001 --node http://127.0.0.1:8020/",
     "deploy": "graph deploy ensdomains/ens --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/",
