Update Old Registry mapping

--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -8,7 +8,7 @@ dataSources:
     name: ENSRegistry
     network: mainnet
     source:
-      address: '0x314159265dd8dbb310642f98f50c066173c1259b'
+      address: 'NEWADDRESS'
       abi: EnsRegistry
     mapping:
       kind: ethereum/events
@@ -31,6 +31,33 @@ dataSources:
           handler: handleNewResolver
         - event: NewTTL(bytes32,uint64)
           handler: handleNewTTL
+  - kind: ethereum/contract
+    name: ENSRegistry
+    network: mainnet
+    source:
+      address: '0x1246Ddaf0885A87D9F3DdF0f08d8B6cc57b68c5f'
+      abi: EnsRegistry
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.2
+      language: wasm/assemblyscript
+      file: ./src/ensRegistry.ts
+      entities:
+        - Domain
+        - Account
+        - Resolver
+      abis:
+        - name: EnsRegistry
+          file: ./abis/Registry.json
+      eventHandlers:
+        - event: 'Transfer(bytes32,address)'
+          handler: handleTransferOldReigstry
+        - event: 'NewOwner(bytes32,bytes32,address)'
+          handler: handleNewOwnerOldReigstry
+        - event: 'NewResolver(bytes32,address)'
+          handler: handleNewResolverOldReigstry
+        - event: 'NewTTL(bytes32,uint64)'
+          handler: handleNewTTLOldReigstry
   - kind: ethereum/contract
     name: Resolver
     network: mainnet
@@ -106,7 +133,7 @@ dataSources:
     name: BaseRegistrar
     network: mainnet
     source:
-      address: '0xfac7bea255a6990f749363002136af6556b31e04'
+      address: 'NEWADDRESS'
       abi: BaseRegistrar
     mapping:
       kind: ethereum/events
@@ -135,7 +162,7 @@ dataSources:
     name: EthRegistrarController
     network: mainnet
     source:
-      address: '0xfac7bea255a6990f749363002136af6556b31e04'
+      address: 'NEWADDRESS'
       abi: EthRegistrarController
     mapping:
       kind: ethereum/events
