--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -10,7 +10,7 @@ dataSources:
     name: ENSRegistry
     network: mainnet
     source:
-      address: 'NEWADDRESS'
+      address: '0x00000000000C2E074eC69A0dFb2997BA6C7d2e1e'
       abi: EnsRegistry
     mapping:
       kind: ethereum/events
@@ -53,13 +53,13 @@ dataSources:
           file: ./abis/Registry.json
       eventHandlers:
         - event: 'Transfer(indexed bytes32,address)'
-          handler: handleTransferOldReigstry
+          handler: handleTransferOldRegistry
         - event: 'NewOwner(indexed bytes32,indexed bytes32,address)'
-          handler: handleNewOwnerOldReigstry
+          handler: handleNewOwnerOldRegistry
         - event: 'NewResolver(indexed bytes32,address)'
-          handler: handleNewResolverOldReigstry
+          handler: handleNewResolverOldRegistry
         - event: 'NewTTL(indexed bytes32,uint64)'
-          handler: handleNewTTLOldReigstry
+          handler: handleNewTTLOldRegistry
   - kind: ethereum/contract
     name: Resolver
     network: mainnet
@@ -135,7 +135,7 @@ dataSources:
     name: BaseRegistrar
     network: mainnet
     source:
-      address: 'NEWADDRESS'
+      address: '0x57f1887a8BF19b14fC0dF6Fd9B2acc9Af147eA85'
       abi: BaseRegistrar
     mapping:
       kind: ethereum/events
@@ -164,7 +164,7 @@ dataSources:
     name: EthRegistrarController
     network: mainnet
     source:
-      address: 'NEWADDRESS'
+      address: '0x283Af0B28c62C092C9727F1Ee09c02CA627EB7F5'
       abi: EthRegistrarController
     mapping:
       kind: ethereum/events
