rename docker container names

--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "deploy-local": "graph deploy graphprotocol/ens --debug --ipfs http://localhost:5001 --node http://127.0.0.1:8020/",
     "remove-local": "graph remove graphprotocol/ens --node http://127.0.0.1:8020",
     "docker:setup": "npm run codegen && npm run docker:create-local && npm run docker:deploy-local",
-    "docker:create-local": "graph create graphprotocol/ens --node http://docker_graph-node_1:8020",
-    "docker:deploy-local": "graph deploy graphprotocol/ens --debug --ipfs http://docker_ipfs_1:5001 --node http://docker_graph-node_1:8020/",
-    "docker:remove-local": "graph remove graphprotocol/ens --node http://docker_graph-node_1:8020",
+    "docker:create-local": "graph create graphprotocol/ens --node http://ens-app_graph-node_1:8020",
+    "docker:deploy-local": "graph deploy graphprotocol/ens --debug --ipfs http://ens-app_ipfs_1:5001 --node http://ens-app_graph-node_1:8020/",
+    "docker:remove-local": "graph remove graphprotocol/ens --node http://ens-app_graph-node_1:8020",
     "build": "graph build",
     "deploy": "graph deploy ensdomains/ens --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/",
     "watch-local": "graph deploy graphprotocol/ens --watch --debug --node http://127.0.0.1:8020/ --ipfs http://localhost:5001"
