--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -14,7 +14,7 @@ dataSources:
       abi: EnsRegistry
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.2
+      apiVersion: 0.0.3
       language: wasm/assemblyscript
       file: ./src/ensRegistry.ts
       entities:
@@ -41,7 +41,7 @@ dataSources:
       abi: EnsRegistry
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.2
+      apiVersion: 0.0.3
       language: wasm/assemblyscript
       file: ./src/ensRegistry.ts
       entities:
@@ -67,7 +67,7 @@ dataSources:
       abi: Resolver
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.2
+      apiVersion: 0.0.3
       language: wasm/assemblyscript
       file: ./src/resolver.ts
       entities:
@@ -110,7 +110,7 @@ dataSources:
       abi: BaseRegistrar
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.2
+      apiVersion: 0.0.3
       language: wasm/assemblyscript
       file: ./src/ethRegistrar.ts
       entities:
@@ -136,7 +136,7 @@ dataSources:
       abi: EthRegistrarController
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.2
+      apiVersion: 0.0.3
       language: wasm/assemblyscript
       file: ./src/ethRegistrar.ts
       entities:
@@ -147,3 +147,5 @@ dataSources:
       eventHandlers:
         - event: 'NameRegistered(string,indexed bytes32,indexed address,uint256,uint256)'
           handler: handleNameRegisteredByController
+        - event: 'NameRenewed(string,indexed bytes32,uint256,uint256)'
+          handler: handleNameRenewedByController
