--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "watch-local": "graph deploy graphprotocol/ens --watch --debug --node http://127.0.0.1:8020/ --ipfs http://localhost:5001"
   },
   "devDependencies": {
+    "@ensdomains/content-hash": "^2.5.3",
     "@graphprotocol/graph-cli": "^0.17.1",
     "@graphprotocol/graph-ts": "^0.17.0"
   },
