--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -10,7 +10,7 @@ dataSources:
     name: ENSRegistry
     network: mainnet
     source:
-      address: "0x00000000000C2E074eC69A0dFb2997BA6C7d2e1e"
+      address: "0x9fE46736679d2D9a65F0992F2272dE9f3c7fa6e0"
       abi: EnsRegistry
     mapping:
       kind: ethereum/events
@@ -37,7 +37,7 @@ dataSources:
     name: ENSRegistryOld
     network: mainnet
     source:
-      address: "0x314159265dd8dbb310642f98f50c066173c1259b"
+      address: "0x5FbDB2315678afecb367f032d93F642f64180aa3"
       abi: EnsRegistry
     mapping:
       kind: ethereum/events
@@ -108,7 +108,7 @@ dataSources:
     name: BaseRegistrar
     network: mainnet
     source:
-      address: "0x57f1887a8BF19b14fC0dF6Fd9B2acc9Af147eA85"
+      address: "0xc5a5C42992dECbae36851359345FE25997F5C42d"
       abi: BaseRegistrar
     mapping:
       kind: ethereum/events
@@ -131,10 +131,33 @@ dataSources:
         - event: "Transfer(indexed address,indexed address,indexed uint256)"
           handler: handleNameTransferred
   - kind: ethereum/contract
+    name: EthRegistrarControllerOld
+    network: mainnet
+    source:
+      address: "0x851356ae760d987E095750cCeb3bC6014560891C"
+      abi: EthRegistrarControllerOld
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.5
+      language: wasm/assemblyscript
+      file: ./src/ethRegistrar.ts
+      entities:
+        - Registration
+      abis:
+        - name: EthRegistrarControllerOld
+          file: ./abis/EthRegistrarControllerOld.json
+      eventHandlers:
+        - event: >-
+            NameRegistered(string,indexed bytes32,indexed
+            address,uint256,uint256)
+          handler: handleNameRegisteredByControllerOld
+        - event: "NameRenewed(string,indexed bytes32,uint256,uint256)"
+          handler: handleNameRenewedByController
+  - kind: ethereum/contract
     name: EthRegistrarController
     network: mainnet
     source:
-      address: "0x283Af0B28c62C092C9727F1Ee09c02CA627EB7F5"
+      address: "0x998abeb3E57409262aE5b751f60747921B33613E"
       abi: EthRegistrarController
     mapping:
       kind: ethereum/events
@@ -149,7 +172,7 @@ dataSources:
       eventHandlers:
         - event: >-
             NameRegistered(string,indexed bytes32,indexed
-            address,uint256,uint256)
+            address,uint256,uint256,uint256)
           handler: handleNameRegisteredByController
         - event: "NameRenewed(string,indexed bytes32,uint256,uint256)"
           handler: handleNameRenewedByController
