--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -176,3 +176,26 @@ dataSources:
           handler: handleNameRegisteredByController
         - event: "NameRenewed(string,indexed bytes32,uint256,uint256)"
           handler: handleNameRenewedByController
+  - kind: ethereum/contract
+    name: NameWrapper
+    network: mainnet
+    source:
+      address: "0x9E545E3C0baAB3E08CdfD552C960A1050f373042"
+      abi: NameWrapper
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.5
+      language: wasm/assemblyscript
+      file: ./src/nameWrapper.ts
+      entities:
+        - NameWrapper
+      abis:
+        - name: NameWrapper
+          file: ./abis/NameWrapper.json
+      eventHandlers:
+        - event: "NameWrapped(indexed bytes32,bytes,address,uint32,uint64)"
+          handler: handleNameWrapped
+        - event: "NameUnwrapped(indexed bytes32,address)"
+          handler: handleNameUnwrapped
+        - event: "FusesSet(indexed bytes32,uint32,uint64)"
+          handler: handleFusesSet
