--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -10,8 +10,9 @@ dataSources:
     name: ENSRegistry
     network: mainnet
     source:
-      address: "0x9fE46736679d2D9a65F0992F2272dE9f3c7fa6e0"
+      address: "0x00000000000C2E074eC69A0dFb2997BA6C7d2e1e"
       abi: EnsRegistry
+      startBlock: 9380380
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
@@ -37,8 +38,9 @@ dataSources:
     name: ENSRegistryOld
     network: mainnet
     source:
-      address: "0x5FbDB2315678afecb367f032d93F642f64180aa3"
+      address: "0x314159265dd8dbb310642f98f50c066173c1259b"
       abi: EnsRegistry
+      startBlock: 3327417
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
@@ -112,8 +114,9 @@ dataSources:
     name: BaseRegistrar
     network: mainnet
     source:
-      address: "0x4A679253410272dd5232B3Ff7cF5dbB88f295319"
+      address: "0x57f1887a8BF19b14fC0dF6Fd9B2acc9Af147eA85"
       abi: BaseRegistrar
+      startBlock: 9380410
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
@@ -138,8 +141,9 @@ dataSources:
     name: EthRegistrarControllerOld
     network: mainnet
     source:
-      address: "0x1613beB3B2C4f22Ee086B2b38C1476A3cE7f78E8"
+      address: "0x283Af0B28c62C092C9727F1Ee09c02CA627EB7F5"
       abi: EthRegistrarControllerOld
+      startBlock: 9380471
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
@@ -161,7 +165,6 @@ dataSources:
     name: EthRegistrarController
     network: mainnet
     source:
-      address: "0x95401dc811bb5740090279Ba06cfA8fcF6113778"
       abi: EthRegistrarController
     mapping:
       kind: ethereum/events
@@ -184,7 +187,6 @@ dataSources:
     name: NameWrapper
     network: mainnet
     source:
-      address: "0xE6E340D132b5f46d1e472DebcD681B2aBc16e57E"
       abi: NameWrapper
     mapping:
       kind: ethereum/events
