--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "scripts": {
     "codegen": "graph codegen --output-dir src/types/",
+    "test": "graph test",
     "setup": "yarn codegen && yarn create-local && yarn deploy-local",
     "create-local": "graph create graphprotocol/ens --node http://127.0.0.1:8020",
     "deploy-local": "graph deploy graphprotocol/ens --debug --ipfs http://localhost:5001 --node http://127.0.0.1:8020/ --version-label 0.0.1",
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@ensdomains/content-hash": "^2.5.3",
     "@graphprotocol/graph-cli": "^0.23.2",
-    "@graphprotocol/graph-ts": "^0.23.1"
+    "@graphprotocol/graph-ts": "^0.29.1",
+    "matchstick-as": "^0.5.0"
   }
 }
