--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "ens-subgraph",
+  "name": "fns-subgraph",
   "version": "1.0.2",
-  "repository": "https://github.com/ensdomains/ens-subgraph",
+  "repository": "https://github.com/fildomains/fns-subgraph",
   "license": "MIT",
   "scripts": {
     "codegen": "graph codegen --output-dir src/types/",
     "test": "graph test",
     "setup": "yarn codegen && yarn create-local && yarn deploy-local",
-    "create-local": "graph create graphprotocol/ens --node http://127.0.0.1:8020",
-    "deploy-local": "graph deploy graphprotocol/ens --debug --ipfs http://localhost:5001 --node http://127.0.0.1:8020/ --version-label 0.0.1",
-    "remove-local": "graph remove graphprotocol/ens --node http://127.0.0.1:8020",
+    "redeploy": "yarn remove-local && yarn create-local && yarn deploy-local",
+    "create-local": "graph create fns/hardhat --node http://127.0.0.1:8020",
+    "deploy-local": "graph deploy fns/hardhat --debug --ipfs http://127.0.0.1:5001 --node http://127.0.0.1:8020/ --version-label 0.0.1",
+    "remove-local": "graph remove fns/hardhat --node http://127.0.0.1:8020",
     "docker:setup": "yarn codegen && yarn docker:create-local && yarn docker:deploy-local",
-    "docker:create-local": "graph create graphprotocol/ens --node http://ens-app_graph-node_1:8020",
-    "docker:deploy-local": "graph deploy graphprotocol/ens --debug --ipfs http://ens-app_ipfs_1:5001 --node http://ens-app_graph-node_1:8020/ --version-label 0.0.1",
-    "docker:remove-local": "graph remove graphprotocol/ens --node http://ens-app_graph-node_1:8020",
+    "docker:create-local": "graph create graphprotocol/fns --node http://fns-app_graph-node_1:8020",
+    "docker:deploy-local": "graph deploy graphprotocol/fns --debug --ipfs http://fns-app_ipfs_1:5001 --node http://fns-app_graph-node_1:8020/ --version-label 0.0.1",
+    "docker:remove-local": "graph remove graphprotocol/fns --node http://fns-app_graph-node_1:8020",
     "build": "graph build",
-    "deploy": "graph deploy ensdomains/ens --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/",
-    "watch-local": "graph deploy graphprotocol/ens --watch --debug --node http://127.0.0.1:8020/ --ipfs http://localhost:5001"
+    "deploy": "graph deploy fns/filecoin --ipfs https://api.thegraph.com/ipfs/ --node https://graph.fildomains.com/deploy/",
+    "watch-local": "graph deploy fns/hardhat --watch --debug --node http://127.0.0.1:8020/ --ipfs http://localhost:5001"
   },
   "devDependencies": {
     "@ensdomains/content-hash": "^2.5.3",
