--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -7,23 +7,23 @@ schema:
   file: ./schema.graphql
 dataSources:
   - kind: ethereum/contract
-    name: ENSRegistry
-    network: mainnet
+    name: Registry
+    network: hardhat
     source:
-      address: "0x00000000000C2E074eC69A0dFb2997BA6C7d2e1e"
-      abi: EnsRegistry
-      startBlock: 9380380
+      address: "0x5FbDB2315678afecb367f032d93F642f64180aa3"
+      abi: Registry
+      startBlock: 0
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
       language: wasm/assemblyscript
-      file: ./src/ensRegistry.ts
+      file: ./src/registry.ts
       entities:
         - Domain
         - Account
         - Resolver
       abis:
-        - name: EnsRegistry
+        - name: Registry
           file: ./abis/Registry.json
       eventHandlers:
         - event: "Transfer(indexed bytes32,address)"
@@ -35,36 +35,8 @@ dataSources:
         - event: "NewTTL(indexed bytes32,uint64)"
           handler: handleNewTTL
   - kind: ethereum/contract
-    name: ENSRegistryOld
-    network: mainnet
-    source:
-      address: "0x314159265dd8dbb310642f98f50c066173c1259b"
-      abi: EnsRegistry
-      startBlock: 3327417
-    mapping:
-      kind: ethereum/events
-      apiVersion: 0.0.5
-      language: wasm/assemblyscript
-      file: ./src/ensRegistry.ts
-      entities:
-        - Domain
-        - Account
-        - Resolver
-      abis:
-        - name: EnsRegistry
-          file: ./abis/Registry.json
-      eventHandlers:
-        - event: "Transfer(indexed bytes32,address)"
-          handler: handleTransferOldRegistry
-        - event: "NewOwner(indexed bytes32,indexed bytes32,address)"
-          handler: handleNewOwnerOldRegistry
-        - event: "NewResolver(indexed bytes32,address)"
-          handler: handleNewResolverOldRegistry
-        - event: "NewTTL(indexed bytes32,uint64)"
-          handler: handleNewTTLOldRegistry
-  - kind: ethereum/contract
     name: Resolver
-    network: mainnet
+    network: hardhat
     source:
       abi: Resolver
     mapping:
@@ -81,7 +53,6 @@ dataSources:
         - Textchanged
         - ContenthashChanged
         - InterfaceChanged
-        - AuthorisationChanged
       abis:
         - name: Resolver
           file: ./abis/PublicResolver.json
@@ -92,10 +63,6 @@ dataSources:
           handler: handleAddrChanged
         - event: "AddressChanged(indexed bytes32,uint256,bytes)"
           handler: handleMulticoinAddrChanged
-        - event: >-
-            AuthorisationChanged(indexed bytes32,indexed address,indexed
-            address,bool)
-          handler: handleAuthorisationChanged
         - event: "ContenthashChanged(indexed bytes32,bytes)"
           handler: handleContentHashChanged
         - event: "InterfaceChanged(indexed bytes32,indexed bytes4,address)"
@@ -104,24 +71,22 @@ dataSources:
           handler: handleNameChanged
         - event: "PubkeyChanged(indexed bytes32,bytes32,bytes32)"
           handler: handlePubkeyChanged
-        - event: "TextChanged(indexed bytes32,indexed string,string)"
-          handler: handleTextChanged
         - event: "TextChanged(indexed bytes32,indexed string,string,string)"
           handler: handleTextChangedWithValue
         - event: "VersionChanged(indexed bytes32,uint64)"
           handler: handleVersionChanged
   - kind: ethereum/contract
     name: BaseRegistrar
-    network: mainnet
+    network: hardhat
     source:
-      address: "0x57f1887a8BF19b14fC0dF6Fd9B2acc9Af147eA85"
+      address: "0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9"
       abi: BaseRegistrar
-      startBlock: 9380410
+      startBlock: 0
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
       language: wasm/assemblyscript
-      file: ./src/ethRegistrar.ts
+      file: ./src/registrar.ts
       entities:
         - Registration
         - NameRegistered
@@ -138,44 +103,21 @@ dataSources:
         - event: "Transfer(indexed address,indexed address,indexed uint256)"
           handler: handleNameTransferred
   - kind: ethereum/contract
-    name: EthRegistrarControllerOld
-    network: mainnet
+    name: RegistrarController
+    network: hardhat
     source:
-      address: "0x283Af0B28c62C092C9727F1Ee09c02CA627EB7F5"
-      abi: EthRegistrarControllerOld
-      startBlock: 9380471
+      address: "0x610178dA211FEF7D417bC0e6FeD39F05609AD788"
+      abi: RegistrarController
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
       language: wasm/assemblyscript
-      file: ./src/ethRegistrar.ts
+      file: ./src/registrar.ts
       entities:
         - Registration
       abis:
-        - name: EthRegistrarControllerOld
-          file: ./abis/EthRegistrarControllerOld.json
-      eventHandlers:
-        - event: >-
-            NameRegistered(string,indexed bytes32,indexed
-            address,uint256,uint256)
-          handler: handleNameRegisteredByControllerOld
-        - event: "NameRenewed(string,indexed bytes32,uint256,uint256)"
-          handler: handleNameRenewedByController
-  - kind: ethereum/contract
-    name: EthRegistrarController
-    network: mainnet
-    source:
-      abi: EthRegistrarController
-    mapping:
-      kind: ethereum/events
-      apiVersion: 0.0.5
-      language: wasm/assemblyscript
-      file: ./src/ethRegistrar.ts
-      entities:
-        - Registration
-      abis:
-        - name: EthRegistrarController
-          file: ./abis/EthRegistrarController.json
+        - name: RegistrarController
+          file: ./abis/RegistrarController.json
       eventHandlers:
         - event: >-
             NameRegistered(string,indexed bytes32,indexed
@@ -185,8 +127,9 @@ dataSources:
           handler: handleNameRenewedByController
   - kind: ethereum/contract
     name: NameWrapper
-    network: mainnet
+    network: hardhat
     source:
+      address: "0x2279B7A0a67DB372996a5FaB50D91eAA73d2eBe6"
       abi: NameWrapper
     mapping:
       kind: ethereum/events
@@ -203,7 +146,7 @@ dataSources:
           handler: handleNameWrapped
         - event: "NameUnwrapped(indexed bytes32,address)"
           handler: handleNameUnwrapped
-        - event: "FusesSet(indexed bytes32,uint32,uint64)"
+        - event: FusesSet(indexed bytes32,uint32)
           handler: handleFusesSet
         - event: TransferSingle(indexed address,indexed address,indexed address,uint256,uint256)
           handler: handleTransferSingle
